Notice dismiss icon overlaps on content issue fixed

--- a/admin/bsf-analytics/assets/css/unminified/style-rtl.css
+++ b/admin/bsf-analytics/assets/css/unminified/style-rtl.css
@@ -4,7 +4,7 @@
 }
 
 #bsf-optin-notice .notice-container {
-    padding-top: 12px;
+    padding-top: 10px;
     padding-bottom: 12px;
 }
 
@@ -13,7 +13,7 @@
 }
 
 #bsf-optin-notice .notice-heading {
-    padding-bottom: 10px;
+    padding: 0 0 12px 20px;
 }
 
 #bsf-optin-notice .button-primary {
